Se modifica interfaz principal

--- a/index.html
+++ b/index.html
@@ -251,99 +251,126 @@
                         </div>
 
                         <!-- Earnings (Monthly) Card Example -->
-                        <!--<div class="col-xl-3 col-md-6 mb-4">
+                        <div class="col-xl-3 col-md-6 mb-4">
                             <div class="card border-left-info shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Ventas -
+                                                Gastos
                                             </div>
-                                            <div class="row no-gutters align-items-center">
-                                                <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-                                                </div>
-                                                <div class="col">
-                                                    <div class="progress progress-sm mr-2">
-                                                        <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="ventas_gastos">
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>-->
+                        </div>
 
                         <!-- Pending Requests Card Example -->
-                        <!--<div class="col-xl-3 col-md-6 mb-4">
+                        <div class="col-xl-3 col-md-6 mb-4">
                             <div class="card border-left-warning shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                                Ventas - Gastos Acumulados</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800"
+                                                id="ventas_gastos_acumulados">
+                                            </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                            <i class="fas fa-coins fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>-->
+                        </div>
                     </div>
                     <div class="row">
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <div class="form-row">
-                                    <div class="col-md-1">
-                                        <img src="img/yape.png" alt="" srcset="" class="w-50">
-                                    </div>
-                                    <div class="col-md-11">
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="yape_ahora">
-                                        </div>
-                                    </div>
+                        <div class="col-md-4">
+                            <div class="card shadow mb-4">
+                                <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">Formas de Pagos</h6>
                                 </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-row">
-                                    <div class="col-md-1">
-                                        <img src="img/plin.png" alt="" srcset="" class="w-50">
-                                    </div>
-                                    <div class="col-md-11">
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="plin_ahora">
-                                        </div>
-                                    </div>
+                                <div class="card-body">
+                                    <ul class="list-group">
+                                        <li class="list-group-item">
+                                            <div class="form-row">
+                                                <div class="col-md-2">
+                                                    <img src="img/yape.png" alt="" srcset="" class="w-100">
+                                                </div>
+                                                <div class="col-md-10">
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="div_pago_4">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="form-row">
+                                                <div class="col-md-2">
+                                                    <img src="img/plin.png" alt="" srcset="" class="w-100">
+                                                </div>
+                                                <div class="col-md-10">
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="div_pago_3">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="form-row">
+                                                <div class="col-md-2">
+                                                    <img src="img/efectivo.jpg" alt="" srcset="" class="w-100">
+                                                </div>
+                                                <div class="col-md-10">
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="div_pago_1">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="form-row">
+                                                <div class="col-md-2">
+                                                    <img src="img/saldo.png" alt="" srcset="" class="w-100">
+                                                </div>
+                                                <div class="col-md-10">
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="div_pago_2">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-row">
-                                    <div class="col-md-1">
-                                        <img src="img/efectivo.jpg" alt="" srcset="" class="w-50">
-                                    </div>
-                                    <div class="col-md-11">
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="efectivo_ahora">
-                                        </div>
-                                    </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4" style="max-height: 350px; overflow-y: scroll;">
+                            <div class="card shadow mb-4">
+                                <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">Ventas Acumuladas</h6>
                                 </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="form-row">
-                                    <div class="col-md-1">
-                                        <img src="img/saldo.png" alt="" srcset="" class="w-50">
-                                    </div>
-                                    <div class="col-md-11">
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="saldo_ahora">
-                                        </div>
-                                    </div>
+                                <div class="card-body">
+                                    <ul class="list-group" id="ventas_acumuladas">
+                                    </ul>
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4" style="max-height: 350px; overflow-y: scroll;">
+                            <div class="card shadow mb-4">
+                                <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">Gastos Acumulados</h6>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-group" id="gastos_acumulados">
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
