--- a/proveedores.html
+++ b/proveedores.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
-    <title>Inventarios DB - Productos</title>
+    <title>Inventarios DB - Proveedores</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -23,8 +23,20 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css"
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
+    <style>
+        .modal {
+            z-index: 1050;
+        }
+
+        .modal-backdrop {
+            z-index: 1040;
+            /* Fondo del modal */
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -69,8 +81,8 @@
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item" href="sucursales.html">Sucursales</a>
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
-                        <a class="collapse-item" href="proveedores.html">Proveedores</a>
-                        <a class="collapse-item active" href="productos.html">Productos</a>
+                        <a class="collapse-item active" href="proveedores.html">Proveedores</a>
+                        <a class="collapse-item" href="productos.html">Productos</a>
                         <a class="collapse-item" href="categorias.html">Categorias</a>
                         <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
@@ -124,6 +136,8 @@
                     </div>
                 </div>
             </li>
+
+            <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Sidebar Toggler (Sidebar) -->
@@ -141,7 +155,8 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-brown-alt topbar mb-4 static-top shadow" style="box-shadow: 0px 2px 8px 2px #313131 !important;">
+                <nav class="navbar navbar-expand navbar-light bg-brown-alt topbar mb-4 static-top shadow"
+                    style="box-shadow: 0px 2px 8px 2px #313131 !important;">
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -188,25 +203,22 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <h1 class="h3 mb-4 text-gray-800">Productos</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Proveedores</h1>
 
                     <div class="row">
                         <div class="col-md-12 text-right mb-3">
                             <span class="btn btn-outline-primary btn-rounded" data-toggle="modal"
-                                data-target="#formulario" onclick="nuevo_producto();"><i class="fa fa-plus"></i> Nuevo
-                                Producto</span>
+                                data-target="#formulario" onclick="nuevo_proveedor();"><i class="fa fa-plus"></i> Nuevo
+                                Proveedor</span>
                         </div>
                         <div class="table-response w-100">
-                            <table class="table table-bordered table-striped" id="tabla-productos">
+                            <table class="table table-bordered table-striped" id="tabla-proveedores">
                                 <thead>
                                     <th>Id</th>
-                                    <th>Código</th>
-                                    <th>Producto</th>
-                                    <th>Categoría</th>
-                                    <th>Marca</th>
-                                    <th>Stock Actual</th>
-                                    <th>Precio Compra</th>
-                                    <th>Precio Venta</th>
+                                    <th>Nombres</th>
+                                    <th>Documento</th>
+                                    <th>Correo</th>
+                                    <th>Teléfono</th>
                                     <th width="5%"></th>
                                 </thead>
                                 <tbody></tbody>
@@ -235,13 +247,12 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
     <div class="modal fade" id="formulario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="productoModalLabel"></h5>
+                    <h5 class="modal-title" id="proveedorModalLabel"></h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
@@ -249,34 +260,30 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <label for="producto">Producto</label>
-                            <input type="text" class="form-control" id="producto">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="codigo">Código Producto</label>
-                            <input type="text" class="form-control" id="codigo">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="descripcion">Descripción</label>
-                            <textarea name="" id="descripcion" class="form-control"></textarea>
+                            <label for="nombres">Nombres</label>
+                            <input type="text" class="form-control" id="nombres">
                         </div>
                         <div class="col-md-6">
-                            <label for="id_marca">Marca</label>
-                            <select name="" id="id_marca" class="form-control">
-                                <option value="0">--SELECCIONE--</option>
-                            </select>
+                            <label for="n_documento">Número Documento</label>
+                            <input type="text" class="form-control" id="n_documento">
                         </div>
                         <div class="col-md-6">
-                            <label for="id_categoria">Categoría</label>
-                            <select name="" id="id_categoria" class="form-control">
-                                <option value="0">--SELECCIONE--</option>
-                            </select>
+                            <label for="telefono">Teléfono</label>
+                            <input type="text" class="form-control" id="telefono">
+                        </div>
+                        <div class="col-md-12">
+                            <label for="email">Correo</label>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        <div class="col-md-12">
+                            <label for="direccion">Dirección</label>
+                            <input type="text" class="form-control" id="direccion">
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <span class="btn btn-outline-success" id="btn-accion-producto">Guardar</span>
+                    <span class="btn btn-outline-success" id="btn-accion-proveedor">Guardar</span>
                 </div>
             </div>
         </div>
@@ -299,6 +306,8 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css" />
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/jquery.datetimepicker.full.min.js"></script>
     <!-- DataTables 1.13.x -->
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
@@ -308,8 +317,7 @@
     <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
     <script src="js/util.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/productos.js"></script>
+    <script src="js/proveedores.js"></script>
 </body>
 
 </html>
