--- a/saldos.html
+++ b/saldos.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>El Secreto de Roxana - Saldos por Cliente</title>
+    <title>Inventarios DB - Saldos por Cliente</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -72,9 +72,10 @@
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item" href="sucursales.html">Sucursales</a>
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
-                        <a class="collapse-item" href="clientes.html">Clientes</a>
+                        <a class="collapse-item" href="proveedores.html">Proveedores</a>
                         <a class="collapse-item" href="productos.html">Productos</a>
                         <a class="collapse-item" href="categorias.html">Categorias</a>
+                        <a class="collapse-item" href="marcas.html">Marcas</a>
                         <a class="collapse-item active" href="saldos.html">Saldos</a>
                         <a class="collapse-item" href="gastos.html">Gastos</a>
                     </div>
